--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
               <span class="fr">学习人数：{{ course.students }}</span>
             </div>
             <div class="bottom">
-              <span class="fl" title="慕课网">{{ course.course_org.name }}</span>
+              <span class="fl" title="AROLS">{{ course.course_org.name }}</span>
               <span class="star fr">{{ course.fav_nums }}</span>
             </div>
           </div>
