--- a/templates/org-base.html
+++ b/templates/org-base.html
@@ -22,7 +22,7 @@
 
       <div class="top">
         <div class="wp">
-          <div class="fl"><p>服务电话：<b>33333333</b></p></div>
+          <div class="fl"><p><b>AROLS自适应学习平台</b></p></div>
           <!--登录后跳转-->
           {% if request.user.is_authenticated %}
             <div class="personal">
