--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
 
       <div class="middle">
         <div class="wp">
-          <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
+          <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/arolslogo.jpg' %}"/></a>
           <div class="searchbox fr">
             <div class="selectContainer fl">
                             <span class="selectOption" id="jsSelectOption" data-value="course">
@@ -120,7 +120,7 @@
   <div class="footer">
     <div class="wp">
       <ul class="cont">
-        <li class="logo"><a href=""><img src="{% static 'images/footlogo.png' %}"/></a></li>
+        <li class="logo"><a href=""><img src="{% static 'images/arolsfootlogo.png' %}"/></a></li>
         <li class="code">
           <p class="center"></p></li>
         <li class="third">
