--- a/templates/usercenter-base.html
+++ b/templates/usercenter-base.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-  <title>{% block title %}个人信息- 慕学在线网{% endblock %}</title>
+  <title>{% block title %}个人信息{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/reset.css' %}">
   <link rel="stylesheet" href="{% static 'css/animate.css' %}">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="{% static 'js/plugins/queryCity/css/cityLayout.css' %}">
 
   <link rel="stylesheet" href="{% static 'css/lq.datetimepick.css' %}"/>
+  <link rel="stylesheet" href="{% static 'css/ols.css' %}"/>
 
   {% block custom_css %}
   {% endblock %}
@@ -25,7 +26,7 @@
     <div class=" header header2">
       <div class="top">
         <div class="wp">
-          <div class="fl"><p>服务电话：<b>33333333</b></p></div>
+          <div class="fl"><p><b>AROLS自适应学习平台</b></p></div>
           <!--登录后跳转-->
           {% if request.user.is_authenticated %}
             <div class="personal">
@@ -62,7 +63,7 @@
 
       <div class="middle">
         <div class="wp">
-          <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
+          <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/arolslogo.jpg' %}"/></a>
           <div class="searchbox fr">
             <div class="selectContainer fl">
                             <span class="selectOption" id="jsSelectOption" data-value="course">
@@ -123,6 +124,7 @@
     <div class="left">
       <ul>
         <li class="active2"><a href="{% url 'users:user_info' %}">个人资料</a></li>
+        <li><a href="{% url 'users:user_ols' %}">在线学习风格</a></li>
         <li><a href="{% url 'users:mycourse' %}">我的课程</a></li>
         <li><a href="{% url 'users:myfav_org' %}">我的收藏</a></li>
         <li>
