--- a/templates/usercenter-info.html
+++ b/templates/usercenter-info.html
@@ -1,6 +1,6 @@
 {% extends 'usercenter-base.html' %}
 {% load staticfiles %}
-{% block title %}个人信息-慕学在线网{% endblock %}
+{% block title %}个人信息{% endblock %}
 
 {% block custom_bread %}
 <section>
