--- a/templates/course-play.html
+++ b/templates/course-play.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ video.name }} - 慕学在线网{% endblock %}
+{% block title %}{{ video.name }}AROLS{% endblock %}
 {% load staticfiles %}
 
 {% block custom_css %}
