--- a/templates/course-comment.html
+++ b/templates/course-comment.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}公开课评论 - 慕学在线网{% endblock %}
+{% block title %}公开课评论{% endblock %}
 {% load staticfiles %}
 
 {% block custom_css %}
