--- a/templates/forgetpwd.html
+++ b/templates/forgetpwd.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-  <title>慕学网首页</title>
+  <title>AROLS</title>
   <link rel="stylesheet" href="{% static 'css/reset.css' %}">
   <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
@@ -13,9 +13,9 @@
 <header>
   <div class="c-box fff-box">
     <div class="wp header-box">
-      <p class="fl hd-tips">慕学网，在线学习平台！</p>
+      <p class="fl hd-tips">AROLS自适应学习平台</p>
       <ul class="fr hd-bar">
-        <li>服务电话：<span>33333333</span></li>
+        <li><span>AROLS自适应学习平台</span></li>
         <li><a href="{% url 'login' %}">[登录]</a></li>
         <li class="active"><a href="{% url 'forget_pwd' %}">[忘记密码]</a></li>
       </ul>
