--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-  <title>慕学在线注册</title>
+  <title>AROLS注册</title>
   <link rel="stylesheet" href="{% static 'css/reset.css' %}">
   <link rel="stylesheet" href="{% static 'css/login.css' %}">
 
@@ -14,9 +14,9 @@
 <header>
   <div class="c-box fff-box">
     <div class="wp header-box">
-      <p class="fl hd-tips">慕学在线，在线学习平台！</p>
+      <p class="fl hd-tips">AROLS自适应学习平台</p>
       <ul class="fr hd-bar">
-        <li>服务电话：<span>4001008031</span></li>
+        <li><span>AROLS自适应学习平台</span></li>
         <li><a href="{% url 'login' %}">[登录]</a></li>
         <li class="active"><a href="{% url 'register' %}">[注册]</a></li>
       </ul>
