--- a/templates/teacher-detail.html
+++ b/templates/teacher-detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% block title %}讲师详情 - 慕学在线网{% endblock %}
+{% block title %}讲师详情{% endblock %}
 
 {% block custom_bread %}
     <section>
