--- a/templates/teachers-list.html
+++ b/templates/teachers-list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% block title %}课程讲师 - 慕学在线网{% endblock %}
+{% block title %}课程讲师{% endblock %}
 
 {% block custom_bread %}
     <section>
