--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
 
         </ul>
       </div>
-      <div class="unslider-arrow prev"></div>
-      <div class="unslider-arrow next"></div>
+      <!--div class="unslider-arrow prev"></div>
+      <div class="unslider-arrow next"></div-->
     </div>
 
   </div>
