--- a/templates/org-base.html
+++ b/templates/org-base.html
@@ -64,7 +64,7 @@
           <img class="fl" style="width: 112px;height: 103px" src="{{ MEDIA_URL }}{{ course_org.image}}"/>
           <div class="head fl">
             <h1>
-              慕课网
+              AROLS
               <img src="{% static 'images/authentication.png' %}"/>
               <img src="{% static 'images/gold.png' %}"/>
             </h1>
